--- a/00-stage-karaf/README.adoc
+++ b/00-stage-karaf/README.adoc
@@ -29,11 +29,31 @@ TIP: You can run Apache Karaf on _Raspberry Pi_. You just need a compatible JDK.
 
 === How to Build
 
+==== Step 1
+
 Run `ant build-stage` on project root.
+
+==== Step 2
+
+You will need to install *WebConsole* and *iPOJO* manually.
+
+1) Start Apache Karaf shell:
+....
+$ stage/bin/karaf
+....
+2) Run the Karaf shell commands:
+....
+karaf@root()> feature:install webconsole
+karaf@root()> feature:repo-add http://repo1.maven.org/maven2/org/apache/felix/org.apache.felix.ipojo.features/1.12.1/org.apache.felix.ipojo.features-1.12.1.xml
+karaf@root()> feature:install ipojo-all
+....
+
+TIP: To access WebConsole navigate to: http://localhost:8181/system/console/.
+Both Username and password are simply 'karaf'.
 
 === Testing
 
-* To start Karaf in command mode use: `stage/bin/karaf`
+* To start Karaf in shell mode use: `stage/bin/karaf`
 * To start command mode Karaf, simple hit Ctrl+D;
 * To start Karaf in daemon mode use: `stage/bin/start`
 * To stop Karaf daemon use: `stage/bin/stop`
