--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@
 
 This is the source code for the architectural examples cited on https://github.com/neoautus/lucidj-docs/blob/master/docs/README.adoc[LucidJ Documentation].
 
-IMPORTANT: *Please be sure to check the documentation inside every subproject (the numerated directories). Every subdirectory have it's own instructions, `build.xml` and can be built independently.*
+IMPORTANT: *Please be sure to check the documentation inside every subproject (the numerated directories). Every subproject have it's own documentation and _instructions to build and run the tests._*
 
 == Prerequisites for Building
 
