--- a/README.adoc
+++ b/README.adoc
@@ -26,17 +26,19 @@ IMPORTANT: *Please be sure to check the documentation inside every subproject (t
 
 The examples were built to illustrate both functionality and implementation. They are IDE-agnostic, showing all the steps to build an OSGi application from zero without need of a particular combination of IDE and plugin or any wizzard tool.
 
-We achieve this using Ant. Today, you can also use Maven to build any OSGi project, however Maven is magical in it's own way, because there are many predefined (and sane) defaults. You may choose Maven for your own projects. On the other side, Ant allows you to follow the logic of building an OSGi jar file, with all required steps very visible. We strongly suggest you to take a time to look into build.xml and configure.xml to get a good idea of whats going on, and how things are being done. It may look intimidating at first, but hopefully will also be instructive.
+We achieve this using Ant. Today, you can also use Maven to build any OSGi project, however Maven is magical in it's own way, because there are many predefined (and sane) defaults. You may choose Maven for your own projects. On the other side, Ant allows you to follow the logic of building an OSGi jar file, with all required steps very visible. We strongly suggest you to take a time to look into `build.xml` and `configure.xml` to get a good idea of whats going on, and how things are being done. It may look intimidating at first, but hopefully will also be instructive.
 
-Specially, you will get known to Bnd (http://bndtools.org/), which is *the* reference tool to build all OSGi-related stuff you can imagine. There's also the iPojo processor, which manipulates the code after compilation and demonstrates the post-processing of OSGi jar bundles.
+Specially, you will get known to `Bnd` (http://bndtools.org/), which is *the* reference tool to build all OSGi-related stuff you can imagine. There's also the iPojo processor, which manipulates the code after compilation and demonstrates the post-processing of OSGi jar bundles.
 
 === Building
 
-*This project can download and create a local install of Apache Karaf for you.* If you want to use the integrated Karaf, you can follow https://github.com/neoautus/architecture-examples/tree/master/00-stage-karaf[these instructions to build the Karaf stage].
+*This project can download and create a local install of Apache Karaf for you.* It is not built by default. If you want to use the integrated Karaf, you should follow https://github.com/neoautus/architecture-examples/tree/master/00-stage-karaf[these instructions to build the Karaf stage].
 
 To build _all_ subprojects at once, just type `ant` on project root.
 
 By default, Ant will download and cache all needed tools, then invoke the `build-all` target. The output of all builds will be located in `dist/` directory beneath every subproject. If you're using the Karaf stage, all bundles will also be deployed into Karaf.
+
+To specific instructions to run the examples and the tests are available for each subproject on the `README.adoc` file.
 
 === Useful Ant targets
 
